fixed nav misalignment. The padding-top was 100px. reset to 10px. Neeed to push up minor tweaks to heroku.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -121,7 +121,7 @@ NAV
 */
 
 nav {
-	padding-top: 100px;
+	padding-top: 10px;
 	height: 90px;
 	/*background-color: #2A1D24;*/
 	/*background-color: #5A3E4C;*/
